--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg  ">
-        <a href="#" class="navbar-brand">MEDMAPS</a>
+        <a href="#" class="navbar-brand">TINDOGS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
